0.003 - 2023-11-08
  - Ability to define Template as perl package with code in __DATA__
  - New utility ::CParser
  - ::Cpppp attribute convert_linecomment_to_c89
      and method 'get_filtered_output'
      and cpppp option --convert-linecomment-to-c89
  - Attribute accessors on ::Template for autocolumn, autocomma,
     autoindent, and autostatementline

0.002 - 2023-10-31
  - Remove autocomma and autostatementline attributes on Cpppp object,
     because they change the validity of template output.
  - Output object stringifies to its content
  - Automatically flush new template instances after BUILD
  - Documentation improvements, and minor code cleanup.

0.001 - 2023-10-11
  - Initial version with features:
     - Template blocks with interpolated Perl expressions
     - Compilation of cpppp to perl packages
     - 'param' declarations that become attributes
     - 'sub' declarations that become methods
     - multi-section output accumulator
     - template inclusion from other templates
     - autoindent, autocolumn, autocomma, autostatementline
     - anticharacters '$trim_comma' and '$trim_ws'
     - file-writing and file-patching output options
     - 'cpppp' CLI tool
  - Reasonable documentation and test coverage
  - Back-compat to 5.20